# Indian-Stock-Market-Prediction-ML-project

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_upstox_production_fixed.py
backend/: data_fetcher.py
data/: BHARTIARTL_test_data.csv  INFY_test_data.csv  KOTAKBANK_test_data.csv
notebooks/: best_model_temp.h5  model_tr.ipynb  model_training.ipynb  production_eda.ipynb  stock_eda.ipynb  temp_best_model.h5
