[project]
name = "stock-prediction-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "joblib==1.4.2",
    "jupyter==1.0.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "pydantic==2.11.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.31.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "streamlit==1.34.0",
    "tensorflow==2.16.1",
    "upstox-python-sdk==2.14.0",
    "uvicorn==0.29.0",
]
